--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>INFAS</title>
 	<script>
-          window.location = "http://www.infas-js.club/2017/recruit/";
+          window.location = "https://infas-js.github.io/2017/recruit//";
     	</script>
 </head>
 <body>
