--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>INFAS</title>
 	<script>
-          window.location = "http://infas-js.github.io/2017";
+          window.location = "http://infas-js.github.io/2018/recruit";
     	</script>
 </head>
 <body>
