--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>INFAS</title>
 	<script>
-		window.location = "http://infas.club/2018/rec";
+		window.location = "http://infas.club/2018/cfp";
 	</script>
 </head>
 <body>
