--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>INFAS</title>
 	<script>
-		window.location = "https://infas.club/2018";
+		window.location = "/2018";
 	</script>
 </head>
 <body>
