更新使網站重新導向至2026

--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>INFAS</title>
+	  <meta charset="utf-8" />
+	  <meta name="viewport" content="width=device-width, initial-scale=1" />
+	  <title>INFAS 全國中學生資訊年會</title>
+	  <meta name="description" content="INFAS 全國中學生資訊年會 2026 即將舉辦。" />
+	  <meta name="theme-color" content="#2C2C2C" />
+	  <meta property="og:type" content="website" />
+	  <meta property="og:title" content="INFAS 2026｜睽違多年再度回歸" />
+	  <meta property="og:description" content="加入籌備、支持贊助，一起打造中學生資訊盛會。" />
+	  <meta property="og:image" content="./favicon256.png" />
+	  <meta property="og:locale" content="zh_TW" />
 	<script>
-		window.location = "/2018";
+		window.location = "/2026";
 	</script>
 </head>
 <body>
